force-app/main/default/objects/Salesforce_Log__c/Salesforce_Log__c.object-meta.xml
<CustomObject>
    <description>A custom object to hold logs created from various apex classes.</description>
    <label>Salesforce Log</label>
    <nameField>
        <displayFormat>L-{0}</displayFormat>
        <label>Custom Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>