force-app/main/default/objects/Salesforce_Log__c/fields/Quiddity__c.field-meta.xml
<CustomField>
    <fullName>Quiddity__c</fullName>
    <description>Quiddity value of the current Request object
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_class_System_Request.htm</description>
    <label>Quiddity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>