force-app/main/default/objects/Salesforce_Log__c/fields/Running_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Running_User_ID__c</fullName>
    <description>Since all Logs are created by &apos;Automated Process&apos; user this field is used to store Id of a running user when a log event was fired.</description>
    <inlineHelpText>Used to store Id of a running user when the Log was created.</inlineHelpText>
    <label>Running User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>